            - creme.forms.toImportField() is replaced by the widget 'ui-import-field' or 'creme.widget.ImportField'.
            - Full rework of creme.notification.NotificationBox.
            - creme.ajax.jqueryAjaxSend() arguments have changed from (url, data, successCb, errorCb, options) to ({url: url, body: data, ...options}, {done: successCb, fail: errorCb}).
        # Apps :
            * Creme_config :
                - In the brick 'GenericModelBrick', "meta" is not injected in the context anymore.
            * Persons :
                - In 'bricks' :
                    - In the method 'NextActivitySummary.get_context()', the returned context does not contain "NARROW" anymore.
                    - In the classes 'ContactCardHatBrick' & 'OrganisationCardHatBrick',
                      the variable "hidden_fields" is not injected anymore.
                - In the button 'buttons.AddLinkedContactButton', the variable "contact_link_perm" is not injected anymore.
            * Activities :
                - The brick 'CalendarConfigItemsBrick' does not inject "has_app_perm" in the template context.
                - The field 'Activity.floating_type' got some light changes.
                  It's now a 'PositiveSmallIntegerField', it ahs a 'choices' attribute & it's viewable.
                - Some small changes have been made in the class 'views.buttons.UnsuccessfulPhoneCallCreation'.
            * Reports :
                - In the field 'report.Field.name', the CustomFields are referenced by their UUID now (see types 'RFT_CUSTOM' & 'RFT_AGG_CUSTOM').
            * Billing :
                - The class 'actions.GenerateNumberAction' has been removed (use '_GenerateNumberAction' instead).
                - In the brick classes 'CreditNotesBrick' & 'Received*Brick',
                  the variable "hidden_fields" is not injected anymore.
                - In 'buttons' :